--- a/src/_includes/layouts/navicons.njk
+++ b/src/_includes/layouts/navicons.njk
@@ -17,9 +17,8 @@
       <div id="skip-to-content">
         <a href="#main-content">Skip to Main Content</a>
       </div>
-      {% include "../utility-header.njk" %} {% include "../settings.njk" %} {%
-      include "../modules/branding.html" %} {% include "../mobile-controls.njk"
-      %}
+      {% include "../utility-header.njk" %} {% include
+      "../modules/branding.html" %} {% include "../mobile-controls.njk" %}
       <div class="navigation-search">
         <!-- navigation types -->
         {% if navigation -%} {%- include navigation -%} {%- else -%} {%- include
