--- a/src/_includes/layouts/sample-site-news.njk
+++ b/src/_includes/layouts/sample-site-news.njk
@@ -58,7 +58,7 @@
         <a href="#main-content">Skip to Main Content</a>
       </div>
       {% if alert %} {% include alert %} {% endif %} {% include
-      "../utility-header.njk" %} {% include "../settings.njk" %} {% include
+      "../utility-header.njk" %} {% include
       "../modules/site-header-sample-site-news.njk" %} {% include
       "../mobile-controls.njk" %}
       <div class="navigation-search full-width-nav container">
