--- a/src/_includes/utility-header.njk
+++ b/src/_includes/utility-header.njk
@@ -18,17 +18,7 @@
           State of California
         </p>
       </div>
-      <div class="settings-links">
-        <button
-          class="btn btn-sm"
-          data-bs-toggle="collapse"
-          data-bs-target="#siteSettings"
-          aria-expanded="false"
-          aria-controls="siteSettings">
-          <span class="ca-gov-icon-gear" aria-hidden="true"></span>
-          Settings
-        </button>
-      </div>
+      <div class="settings-links"></div>
     </div>
   </div>
 </div>
