--- a/src/_includes/layouts/search.njk
+++ b/src/_includes/layouts/search.njk
@@ -37,8 +37,8 @@
         <a href="#main-content">Skip to Main Content</a>
       </div>
       {% if alert %} {% include alert %} {% endif %} {% include
-      "../utility-header.njk" %} {% include "../settings.njk" %} {% include
-      "../site-header.njk" %} {% include "../mobile-controls.njk" %}
+      "../utility-header.njk" %} {% include "../site-header.njk" %} {% include
+      "../mobile-controls.njk" %}
 
       <div class="navigation-search full-width-nav container">
         <div id="head-search" class="search-container"></div>
