starting point for 2 sizes

--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -44,12 +44,15 @@
     <div class="col-md-6 m-b-md p-l-lg-desktop">
       <div
         class="pos-rel m-b-0 overflow-hidden bg-white text-center brd-solid-1 brd-gray-200">
-        <img
-          class="img-fluid"
-          src="/images/caaba-example.jpg"
-          width="950"
-          style="aspect-ratio: 950 / 698"
-          alt="Homepage screenshot of California's Abortion Access Portal website." />
+        <picture>
+          <source media="(max-width: 799px)" srcset="/images/125x125.jpg" />
+          <img
+            class="img-fluid"
+            src="/images/caaba-example.jpg"
+            width="950"
+            style="aspect-ratio: 950 / 698"
+            alt="Homepage screenshot of California's Abortion Access Portal website." />
+        </picture>
       </div>
 
       <div class="pt-3" style="min-height: 236px;">
