low res versions of screenshots

--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -4,13 +4,18 @@
     <div class="col-md-6 m-b-md p-r-lg-desktop">
       <div
         class="pos-rel m-b-0 overflow-hidden bg-white text-center  brd-solid-1 brd-gray-200">
-        <img
-          class="img-fluid"
-          src="/images/bbfa-example.jpg"
-          width="950"
-          style="aspect-ratio: 950 / 698"
-          alt="Homepage screenshot of Broadband
+        <picture>
+          <source
+            media="(max-width: 991px)"
+            srcset="/images/bbfa-example-low.jpg" />
+          <img
+            class="img-fluid"
+            src="/images/bbfa-example.jpg"
+            width="950"
+            style="aspect-ratio: 950 / 698"
+            alt="Homepage screenshot of Broadband
         for all website." />
+        </picture>
       </div>
 
       <div class="pt-3" style="min-height: 236px;">
@@ -45,7 +50,9 @@
       <div
         class="pos-rel m-b-0 overflow-hidden bg-white text-center brd-solid-1 brd-gray-200">
         <picture>
-          <source media="(max-width: 799px)" srcset="/images/125x125.jpg" />
+          <source
+            media="(max-width: 991px)"
+            srcset="/images/caaba-example-low.jpg" />
           <img
             class="img-fluid"
             src="/images/caaba-example.jpg"
