adding a lowres webp for bear

--- a/src/_includes/modules/header-primary-banner.html
+++ b/src/_includes/modules/header-primary-banner.html
@@ -18,12 +18,17 @@
         </div>
       </div>
       <div class="col my-auto">
-        <img
-          class="py-3"
-          width="100%"
-          src="/images/header-bear.png"
-          alt=""
-          style="aspect-ratio: 1146 / 827" />
+        <picture>
+          <source
+            media="(max-width: 767px)"
+            srcset="/images/header-bear-low.webp" />
+          <img
+            class="py-3"
+            width="100%"
+            src="/images/header-bear.png"
+            alt=""
+            style="aspect-ratio: 1146 / 827" />
+        </picture>
       </div>
     </div>
   </div>
