using an optimized SVG image for the bear

--- a/src/_includes/modules/header-primary-banner.html
+++ b/src/_includes/modules/header-primary-banner.html
@@ -18,17 +18,12 @@
         </div>
       </div>
       <div class="col my-auto">
-        <picture>
-          <source
-            media="(max-width: 767px)"
-            srcset="/images/header-bear-low.webp" />
-          <img
-            class="py-3"
-            width="100%"
-            src="/images/header-bear.png"
-            alt=""
-            style="aspect-ratio: 1146 / 827" />
-        </picture>
+        <img
+          class="py-3"
+          width="100%"
+          src="/images/header-bear.svg"
+          alt=""
+          style="aspect-ratio: 1146 / 827" />
       </div>
     </div>
   </div>
