--- a/src/_includes/layouts/components.njk
+++ b/src/_includes/layouts/components.njk
@@ -8,7 +8,7 @@
       {%- include "../breadcrumbs.njk" -%}
       <div class="row">
         <div
-          class="col-md-3">
+          class="col-lg-3">
           {# SIde navigation (rendering data from /src/_data/components.json and /src/_data/helpers.js #}
           <nav
             aria-labelledby="components-list" class="side-navigation sticky-6">
@@ -49,7 +49,7 @@
             </ul>
           </nav>
         </div>
-        <div class="col-md-9 p-b-lg">{{ content | safe }}</div>
+        <div class="col-lg-9 p-b-lg">{{ content | safe }}</div>
       </div>
     </div>
   </main>
