--- a/src/_includes/layouts/patterns.njk
+++ b/src/_includes/layouts/patterns.njk
@@ -8,7 +8,7 @@
         {% include "../breadcrumbs.njk" %}
         <div class="row">
           <div
-            class="col-md-3">
+            class="col-lg-3">
             {# SIde navigation (rendering data from /src/_data/patterns.json and /src/_data/helpers.js -#}
             <nav
               aria-labelledby="components-list" class="side-navigation sticky-6">
@@ -55,7 +55,7 @@
               </ul>
             </nav>
           </div>
-          <div class="col-md-9 p-b-lg body-content">{{ content | safe }}</div>
+          <div class="col-lg-9 p-b-lg body-content">{{ content | safe }}</div>
         </div>
       </div>
     </main>
