--- a/src/scss/cagov.core.scss
+++ b/src/scss/cagov.core.scss
@@ -96,6 +96,7 @@
 @import "cagov/progress-bar.scss";
 @import "cagov/progress-block.scss";
 @import "cagov/gradient-backgrounds.scss";
+@import "cagov/side-navigation.scss";
 @import "cagov/step-list.scss";
 @import "cagov/link-grid.scss";
 @import "cagov/feature-card.scss";
