--- a/src/scss/colortheme/colorscheme-master.scss
+++ b/src/scss/colortheme/colorscheme-master.scss
@@ -28,7 +28,7 @@
 @import "cs-form.scss";
 @import "cs-blocks.scss";
 @import "cs-return-top.scss";
-@import "cs-page-navigation.scss";
+@import "cs-side-navigation.scss";
 @import "cs-step-list.scss";
 @import "cs-accordion-sidenav.scss";
 @import "cs-link-grid.scss";
