--- a/src/scss/colortheme/oceanside-import.scss
+++ b/src/scss/colortheme/oceanside-import.scss
@@ -33,7 +33,7 @@
 @import "cs-blocks.scss";
 @import "cs-panes.scss";
 @import "cs-return-top.scss";
-@import "cs-page-navigation.scss";
+@import "cs-side-navigation.scss";
 @import "cs-step-list.scss";
 @import "cs-accordion-sidenav.scss";
 @import "cs-alert.scss";
