--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -6,24 +6,24 @@
         class="pos-rel m-b-0 overflow-hidden bg-white text-center  brd-solid-1 brd-gray-200">
         <picture>
           <source
-            media="(max-width: 991px)"
-            srcset="/images/bbfa-example-low.jpg" />
+            media="(max-width: 575px)"
+            srcset="/images/homepage-sample-climate-low.jpg" />
           <img
             class="img-fluid"
-            src="/images/bbfa-example.jpg"
+            src="/images/homepage-sample-climate.jpg"
             width="950"
             style="aspect-ratio: 950 / 698"
-            alt="Homepage screenshot of Broadband
-        for all website." />
+            alt="Homepage screenshot of Climate Action website." />
         </picture>
       </div>
 
       <div class="pt-3" style="min-height: 236px;">
-        <h3 class="h4 m-t-0 m-b-sm">Broadband for All</h3>
+        <h3 class="h4 m-t-0 m-b-sm">Climate Action</h3>
         <p>
-          The State Web Template enabled a plug-and-play approach with
-          components on the homepage. With less time spent on engineering, the
-          team could focus more on content and design.
+          The Design System components and structure made it easier to develop
+          and design. With less time focused on engineering, the team could
+          focus their time on content, UX design, and branding. This site shares
+          important climate-saving programs to Californians.
         </p>
 
         <span class="d-flex flex-center lh-1">
@@ -37,10 +37,8 @@
               d="m19 22.1-1.1-1 8.8-8.8H0v-1.6h26.7L17.9 2 19 1l10.6 10.6L19 22.1Z"
               fill="#046B99" />
           </svg>
-          <a
-            class="font-weight-bold"
-            href="https://broadbandforall.cdt.ca.gov/">
-            broadbandforall.cdt.ca.gov
+          <a class="font-weight-bold" href="https://climateaction.ca.gov/">
+            climateaction.ca.gov
           </a>
         </span>
       </div>
@@ -51,11 +49,11 @@
         class="pos-rel m-b-0 overflow-hidden bg-white text-center brd-solid-1 brd-gray-200">
         <picture>
           <source
-            media="(max-width: 991px)"
-            srcset="/images/caaba-example-low.jpg" />
+            media="(max-width: 575px)"
+            srcset="/images/homepage-sample-abortion-low.jpg" />
           <img
             class="img-fluid"
-            src="/images/caaba-example.jpg"
+            src="/images/homepage-sample-abortion.jpg"
             width="950"
             style="aspect-ratio: 950 / 698"
             alt="Homepage screenshot of California's Abortion Access Portal website." />
