putting the correct aspect ratios

--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -11,8 +11,8 @@
           <img
             class="img-fluid"
             src="/images/homepage-sample-climate.jpg"
-            width="950"
-            style="aspect-ratio: 950 / 698"
+            width="100%"
+            style="aspect-ratio: 450 / 310"
             alt="Homepage screenshot of Climate Action website." />
         </picture>
       </div>
@@ -54,8 +54,8 @@
           <img
             class="img-fluid"
             src="/images/homepage-sample-abortion.jpg"
-            width="950"
-            style="aspect-ratio: 950 / 698"
+            width="100%"
+            style="aspect-ratio: 450 / 309"
             alt="Homepage screenshot of California's Abortion Access Portal website." />
         </picture>
       </div>
