trying the w-100 class

--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -9,9 +9,8 @@
             media="(max-width: 575px)"
             srcset="/images/homepage-sample-climate-low.jpg" />
           <img
-            class="img-fluid"
+            class="img-fluid w-100"
             src="/images/homepage-sample-climate.jpg"
-            width="100%"
             style="aspect-ratio: 450 / 310"
             alt="Homepage screenshot of Climate Action website." />
         </picture>
@@ -52,9 +51,8 @@
             media="(max-width: 575px)"
             srcset="/images/homepage-sample-abortion-low.jpg" />
           <img
-            class="img-fluid"
+            class="img-fluid w-100"
             src="/images/homepage-sample-abortion.jpg"
-            width="100%"
             style="aspect-ratio: 450 / 309"
             alt="Homepage screenshot of California's Abortion Access Portal website." />
         </picture>
