added ability to add custom JS libraries to the specific pages via front matter #1424

--- a/src/_includes/head-js-css.njk
+++ b/src/_includes/head-js-css.njk
@@ -5,7 +5,9 @@
 <link rel="stylesheet" href="/css/colortheme-oceanside.min.css" />
 {% endif -%} {%- if customcss -%}
 <link rel="stylesheet" href="{{ customcss }}" />
-{% endif -%}
+{% endif -%} {%- if customjs -%} {% for link in customjs %}
+<script src="{{ link }}"></script>
+{%- endfor -%} {%- endif %}
 <link
   rel="apple-touch-icon-precomposed"
   sizes="100x100"
