starting point with working image

--- a/src/_includes/global-footer.njk
+++ b/src/_includes/global-footer.njk
@@ -3,10 +3,9 @@
   <div class="container">
     <div class="d-flex">
       <a href="https://ca.gov" class="cagov-logo" target="_blank">
-        <img
-          src="/images/Ca-Gov-Logo-Gold.svg"
-          alt="CA.gov logo"
-          style="aspect-ratio: 37.34 / 27.19" />
+        <svg version="2.0" alt="CA.gov logo" style="aspect-ratio: 33 / 24">
+          <use href="#circle-arrow-left" />
+        </svg>
       </a>
       <ul class="footer-links">
         <li>
