--- a/src/scss/cagov/utility-header.scss
+++ b/src/scss/cagov/utility-header.scss
@@ -109,7 +109,7 @@
   }
 }
 
-.header-cagov-logo img {
+.header-cagov-logo svg {
   left: 27px;
   height: 1.7rem;
 
@@ -135,7 +135,7 @@
       .header-cagov-logo {
         margin-right: 0.5rem;
 
-        img {
+        svg {
           left: 0;
           height: 24px;
           vertical-align: top;
