separate file for SVG during build

--- a/src/_includes/global-footer.njk
+++ b/src/_includes/global-footer.njk
@@ -3,8 +3,8 @@
   <div class="container">
     <div class="d-flex">
       <a href="https://ca.gov" class="cagov-logo" target="_blank">
-        <svg version="2.0" alt="CA.gov logo" style="aspect-ratio: 33 / 24">
-          <use href="#circle-arrow-left" />
+        <svg alt="CA.gov logo" style="aspect-ratio: 33 / 24">
+          <use href="#ca-gov-logo-svg" />
         </svg>
       </a>
       <ul class="footer-links">
