--- a/src/_includes/global-footer.njk
+++ b/src/_includes/global-footer.njk
@@ -3,9 +3,7 @@
   <div class="container">
     <div class="d-flex">
       <a href="https://ca.gov" class="cagov-logo" target="_blank">
-        <svg alt="CA.gov logo" style="aspect-ratio: 33 / 24">
-          <use href="#ca-gov-logo-svg" />
-        </svg>
+        <span class="ca-gov-logo-svg"></span>
       </a>
       <ul class="footer-links">
         <li>
