moving to globals.scss

--- a/src/_includes/global-footer.njk
+++ b/src/_includes/global-footer.njk
@@ -2,7 +2,8 @@
 <footer id="footer" class="global-footer">
   <div class="container">
     <div class="d-flex">
-      <a href="https://ca.gov" class="cagov-logo" target="_blank">
+      <a href="https://ca.gov" class="cagov-logo">
+        <span class="sr-only">CA.gov</span>
         <span class="ca-gov-logo-svg"></span>
       </a>
       <ul class="footer-links">
