Adding backwards compatibility

--- a/src/scss/cagov/global-footer.scss
+++ b/src/scss/cagov/global-footer.scss
@@ -12,6 +12,11 @@
 
   .cagov-logo {
     margin-right: 1.5rem;
+
+    // DEPRICATED - no longer need (img) because of .ca-gov-logo-svg
+    img {
+      height: 1.7rem;
+    }
   }
 
   .footer-links {
