--- a/src/scss/cagov/utility-header.scss
+++ b/src/scss/cagov/utility-header.scss
@@ -134,9 +134,17 @@
       .header-cagov-logo {
         margin-right: 0.5rem;
 
-        .ca-gov-logo-svg {
+        // DEPRICATED - no longer need (img) because of .ca-gov-logo-svg
+        img {
           left: 0;
+          height: 24px;
+          vertical-align: top;
+          margin-top: 6px;
 
+          vertical-align: middle;
+        }
+
+        .ca-gov-logo-svg {
           vertical-align: middle;
         }
 
