--- a/src/scss/cagov/search-google-cse.scss
+++ b/src/scss/cagov/search-google-cse.scss
@@ -21,3 +21,33 @@
   float: left;
   margin-right: calc($grid-gutter-width / 2);
 }
+
+.gs-result {
+  a.gs-title,
+  a.gs-title b {
+    color: $color-p2 !important;
+  }
+  .gsc-url-top {
+    .gs-visibleUrl-breadcrumb span {
+      color: var(--bs-gray-600, #6c757d) !important;
+    }
+  }
+  .gs-snippet {
+    color: $text-color !important;
+  }
+}
+
+.gsc-cursor-box {
+  .gsc-cursor {
+    .gsc-cursor-page {
+      color: $color-p3 !important;
+    }
+    .gsc-cursor-current-page {
+      color: $color-p3 !important;
+    }
+  }
+}
+
+.gcsc-find-more-on-google {
+  color: $color-p2 !important;
+}
