revert from bootstrap variable to template scss variable

--- a/src/scss/cagov/search-google-cse.scss
+++ b/src/scss/cagov/search-google-cse.scss
@@ -29,7 +29,7 @@
   }
   .gsc-url-top {
     .gs-visibleUrl-breadcrumb span {
-      color: var(--bs-gray-600, #6c757d) !important;
+      color: $gray-600 !important;
     }
   }
   .gs-snippet {
