added media tag to margin scroll styles

--- a/src/scss/cagov/fixed-header.scss
+++ b/src/scss/cagov/fixed-header.scss
@@ -70,5 +70,8 @@
 }
 
 h2 {
-  scroll-margin-top: 150px;
+  scroll-margin-top: 100px;
+  @media (min-width: $screen-md-min) {
+    scroll-margin-top: 150px;
+  }
 }
