Fixed footer link

--- a/src/_includes/global-footer.njk
+++ b/src/_includes/global-footer.njk
@@ -15,8 +15,7 @@
         </li>
         <li>
           <a
-            href="/images/WebAccessibilityCert-template.webstandards.ca.gov.pdf"
-            aria-label="Accessibility Certification">
+            href="/images/WebAccessibilityCert-template.webstandards.ca.gov.pdf">
             Website accessibility certification
           </a>
         </li>
