--- a/src/_includes/modules/site-footer.html
+++ b/src/_includes/modules/site-footer.html
@@ -24,7 +24,7 @@
         <a
           href="/accessibility.html"
           class="d-block no-underline m-y font-size-16">
-          Accessibility
+          Accessibility <span class="sr-only">compliance</span>
         </a>
       </div>
       <div class="col-md-4">
