Adding a distinct id for formlabel

--- a/src/_includes/modules/form-label.html
+++ b/src/_includes/modules/form-label.html
@@ -1,6 +1,6 @@
-<label class="form-control-label" for="InputName">Full name</label>
+<label class="form-control-label" for="InputName_formLabel">Full name</label>
 <input
   type="text"
   class="form-control"
-  id="InputName"
+  id="InputName_formLabel"
   placeholder="Full name" />
