--- a/src/_includes/analytics.njk
+++ b/src/_includes/analytics.njk
@@ -1,18 +1,12 @@
-<!-- BEGIN Google Analytics -->
-<script
-  async="async"
-  src="https://www.googletagmanager.com/gtag/js?id=G-69TD0KNT0F&l=dataLayer&cx=c"></script>
+<!-- BEGIN Google Tag Manager -->
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() {
-    dataLayer.push(arguments);
-  }
-  gtag("js", new Date());
-  // statewide GA properties. Please keep for CA.GOV statewide reporting.
-  gtag("config", "G-69TD0KNT0F");
-  gtag("config", "UA-3419582-2");
-  // please update state department UA/GA4 code in line below before deployment
-  gtag("config", "G-75V2BNQ3DR");
-  gtag("config", "UA-20973992-30");
+  //Replace this with your GTM tag from https://tagmanager.google.com
+  const gtmTag = "GTM-PWPX7KD";
+
+  (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer',gtmTag);
 </script>
-<!-- END Google Analytics -->
+<!-- END Google Tag Manager -->
