fixed a src image issue with sample nav-flex code

--- a/src/_includes/modules/nav-flex.html
+++ b/src/_includes/modules/nav-flex.html
@@ -157,7 +157,7 @@
             <div class="media-left">
               <img
                 class="media-object width-80 height-80"
-                src="/sample/images/02.png"
+                src="/images/sample/images/02.png"
                 alt="About icon" />
             </div>
             <div class="media-body">
@@ -174,7 +174,7 @@
             <div class="media-left">
               <img
                 class="media-object width-80 height-80"
-                src="/sample/images/01.png"
+                src="/images/sample/images/01.png"
                 alt="Web Standards icon" />
             </div>
             <div class="media-body">
