fixing header-primary-banner

--- a/src/_includes/modules/header-primary-banner.html
+++ b/src/_includes/modules/header-primary-banner.html
@@ -1,4 +1,4 @@
-<div class="header-primary-banner hidden-print header-image">
+<div class="header-primary-banner hidden-print">
   <div class="container">
     <div class="row my-4">
       <div class="col my-auto">
