Replace a11y cert pdf with cert page

--- a/src/_includes/global-footer.njk
+++ b/src/_includes/global-footer.njk
@@ -14,8 +14,7 @@
           <a href="/privacy-policy.html">Privacy policy</a>
         </li>
         <li>
-          <a
-            href="/images/WebAccessibilityCert-template.webstandards.ca.gov.pdf">
+          <a href="/website-acessibility-certification.html">
             Website accessibility certification
           </a>
         </li>
