new NPM version, scripts to top

--- a/src/_includes/head-js-css.njk
+++ b/src/_includes/head-js-css.njk
@@ -10,6 +10,10 @@
 {% endif -%} {%- if customjs -%} {% for link in customjs %}
 <script src="{{ link }}"></script>
 {%- endfor -%} {%- endif %}
+<script
+  type="text/javascript"
+  src="/state-template/js/cagov.core.min.js"></script>
+<script type="text/javascript" src="/js/custom.min.js"></script>
 <link
   rel="apple-touch-icon-precomposed"
   sizes="100x100"
