--- a/src/_includes/layouts/navicons-landing.njk
+++ b/src/_includes/layouts/navicons-landing.njk
@@ -35,7 +35,6 @@
     <div id="main-content" class="main-content">
       <main class="main-primary" id="main">{{ content | safe }}</main>
     </div>
-    {% endblock %} {% include "../global-footer.njk" %} {% include
-    "../scripts.njk" %}
+    {% endblock %} {% include "../global-footer.njk" %}
   </body>
 </html>
