--- a/src/_includes/layouts/navicons.njk
+++ b/src/_includes/layouts/navicons.njk
@@ -42,7 +42,6 @@
         </main>
       </div>
     </div>
-    {% endblock %} {% include "../global-footer.njk" %} {% include
-    "../scripts.njk" %}
+    {% endblock %} {% include "../global-footer.njk" %}
   </body>
 </html>
