--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -67,7 +67,6 @@
       </div>
     </header>
     {% block content -%} {{ content | safe }} {%- endblock -%} {%- include
-    "modules/site-footer.html" -%} {%- include "../global-footer.njk" -%} {%-
-    include "../scripts.njk" -%}
+    "modules/site-footer.html" -%} {%- include "../global-footer.njk" -%}
   </body>
 </html>
