--- a/src/_includes/layouts/sample-site.njk
+++ b/src/_includes/layouts/sample-site.njk
@@ -78,6 +78,6 @@
       </div>
     </div>
     {% endblock %} {% include "modules/site-footer.html" %} {% include
-    "../global-footer.njk" %} {% include "../scripts.njk" %}
+    "../global-footer.njk" %}
   </body>
 </html>
