--- a/src/_includes/analytics.njk
+++ b/src/_includes/analytics.njk
@@ -15,9 +15,7 @@
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.defer=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  function gtag() {dataLayer.push(arguments);}
-  gtag("config", yourGA4MeasurementId);
-  //gtag("set","allow_google_signals",false);
+  (function(){dataLayer.push(arguments)})('config',yourGA4MeasurementId);
   })(window,document,'script','dataLayer',stateGTMAccount);
 </script>
 <!-- END Google Tag Manager -->
