clean css combo

--- a/src/_includes/head-js-css.njk
+++ b/src/_includes/head-js-css.njk
@@ -1,11 +1,5 @@
-<link rel="stylesheet" href="/state-template/css/cagov.core.min.css" />
-{% if colortheme -%}
-<link rel="stylesheet" href="{{ colortheme }}" />
-{% else -%}
-<link
-  rel="stylesheet"
-  href="/state-template/css/colortheme-oceanside.min.css" />
-{% endif -%} {%- if customcss -%}
+<link rel="stylesheet" href="/css/theme.css" />
+{%- if customcss -%}
 <link rel="stylesheet" href="{{ customcss }}" />
 {% endif -%} {%- if customjs -%} {% for link in customjs %}
 <script src="{{ link }}"></script>
