--- a/pages/theme.css.njk
+++ b/pages/theme.css.njk
@@ -1,5 +1,5 @@
 ---
-permalink: css/theme.css
+permalink: css/cagov.core.colortheme-oceanside.min.css
 ---
 {#- capture the CSS content as a Nunjucks variable -#} 
 {%- set css -%}
