trying experimental iphone banner fix

--- a/src/_includes/head-js-css.njk
+++ b/src/_includes/head-js-css.njk
@@ -2,6 +2,13 @@
 {%- if customcss -%}
 <link rel="stylesheet" href="{{ customcss }}" />
 {% endif -%}
+
+<style>
+  .branding .header-organization-banner a {
+    min-width: 100%;
+  }
+</style>
+
 <script
   type="text/javascript"
   src="/state-template/js/cagov.core.min.js"></script>
