fix page-navigation-label dupe

--- a/src/_includes/modules/page-navigation-more.html
+++ b/src/_includes/modules/page-navigation-more.html
@@ -1,5 +1,5 @@
-<nav aria-labelledby="page-navigation-label" class="page-navigation">
-  <div id="page-navigation-label" class="label">On this page</div>
+<nav aria-labelledby="page-navigation-label-more" class="page-navigation">
+  <div id="page-navigation-label-more" class="label">On this page</div>
   <ul class="columns-2">
     <li><a href="#Anchor-link-1">Anchor link 1</a></li>
     <li><a href="#Anchor-link-2">Anchor link 2</a></li>
