fix for homepage arrows on iphone12

--- a/src/_includes/modules/three-cards.html
+++ b/src/_includes/modules/three-cards.html
@@ -92,8 +92,7 @@
   <p class="link-action m-b-md">
     <span class="d-flex flex-center lh-1">
       <svg
-        width="31px"
-        class="m-r-sm"
+        class="m-r-sm height-20"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 30 23">
