--- a/src/_includes/modules/two-cards.html
+++ b/src/_includes/modules/two-cards.html
@@ -27,8 +27,7 @@
 
         <span class="d-flex flex-center lh-1">
           <svg
-            width="31px"
-            class="m-r-sm"
+            class="m-r-sm height-20"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 30 23">
@@ -68,8 +67,7 @@
         </p>
         <span class="d-flex flex-center lh-1">
           <svg
-            width="31px"
-            class="m-r-sm"
+            class="m-r-sm height-20"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 30 23">
