using GTM code for 6.2

--- a/src/_includes/analytics.njk
+++ b/src/_includes/analytics.njk
@@ -2,13 +2,13 @@
 <link rel="preconnect" href="https://www.googletagmanager.com" />
 <link rel="preconnect" href="https://www.google-analytics.com" />
 <script>
-  //The GA4 Measurement ID that this website should use for website analytics
+  //The GA4 Measurement ID that this website should use for website analytics /Analytics
   //*** BEGIN STATE TEMPLATE CHANGE REQUESTED
   const yourGA4MeasurementId = "G-XFPJTRCEF6"; //Set to the default GA4 Measurement ID (G-75V2BNQ3DR), please change it to the one for your organization.
   //*** END STATE TEMPLATE CHANGE REQUESTED
 
   //Keep this tag mananger code as is, it helps collect data for ALL ca.gov sites
-  const stateGTMAccount = "GTM-5233GKC"; //GTM-5233GKC, all ca.gov + State Template Version 6.1.2
+  const stateGTMAccount = "GTM-NJ6Q4MV"; //GTM-NJ6Q4MV, all ca.gov + State Template Version 6.2
 
   //Support code to make this work, just leave this as is
   (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
