adding statewide alerts

--- a/src/_includes/head-js-css.njk
+++ b/src/_includes/head-js-css.njk
@@ -45,3 +45,5 @@
 <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
 <link rel="shortcut icon" href="/favicon.ico" />
 {% include "./analytics.njk" -%}
+<!-- Statewide Alerts Server -->
+<script defer src="https://alert.cdt.ca.gov"></script>
