Turning GA off to check performance

--- a/src/_includes/analytics.njk
+++ b/src/_includes/analytics.njk
@@ -1,4 +1,5 @@
-<!-- BEGIN Google Tag Manager -->
+<!-- Temporarily shutting off GA
+
 <link rel="preconnect" href="https://www.googletagmanager.com" />
 <link rel="preconnect" href="https://www.google-analytics.com" />
 <script>
@@ -18,4 +19,4 @@
   (function(){dataLayer.push(arguments)})('config',yourGA4MeasurementId);
   })(window,document,'script','dataLayer',stateGTMAccount);
 </script>
-<!-- END Google Tag Manager -->
+-->
