--- a/src/_includes/analytics.njk
+++ b/src/_includes/analytics.njk
@@ -1,6 +1,6 @@
 <!-- BEGIN Google Tag Manager -->
+<!-- Custom Configuration for https://template.webstandards.ca.gov/ only -->
 <link rel="preconnect" href="https://www.googletagmanager.com" />
-<link rel="preconnect" href="https://www.google-analytics.com" />
 <script>
   (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-PWPX7KD');
 </script>
