--- a/src/_includes/head-js-css.njk
+++ b/src/_includes/head-js-css.njk
@@ -46,4 +46,4 @@
 <link rel="shortcut icon" href="/favicon.ico" />
 {% include "./analytics.njk" -%}
 <!-- Statewide Alerts Server -->
-<script defer src="https://alert.cdt.ca.gov"></script>
+<script defer src="https://alert.cdt.ca.gov" crossorigin="anonymous"></script>
