--- a/src/_includes/modules/gradient-radial.html
+++ b/src/_includes/modules/gradient-radial.html
@@ -1,7 +1,7 @@
 <h4>Gray</h4>
 <div class="container height-100 bg-grey-radialgradient"></div>
 
-<h4>Grey Light</h4>
+<h4>Gray Light</h4>
 <div class="container height-100 bg-greylight-radialgradient"></div>
 
 <h4>Primary</h4>
