rel="noindex" on sample links

--- a/src/_includes/modules/navigation-sample-site.njk
+++ b/src/_includes/modules/navigation-sample-site.njk
@@ -9,6 +9,7 @@
     <li class="nav-item" role="presentation">
       <a
         href="/components/side-navigation-sample.html"
+        rel="noindex"
         class="first-level-link active">
         Types of parties
       </a>
