--- a/src/_includes/modules/site-header-sample-site-news.njk
+++ b/src/_includes/modules/site-header-sample-site-news.njk
@@ -2,10 +2,10 @@
 <div class="section-default">
   <div class="branding">
     <div class="header-organization-banner">
-      <a href="/patterns/newsroom-sample.html">
+      <a href="/patterns/newsroom-sample.html" rel="noindex">
         <div class="logo-assets">
           <img
-            src="/images/sample//images/sample-logo.png"
+            src="/images/sample-logo.png"
             class="logo-img"
             alt="Sample site Logo" />
           <div class="logo-text">
