--- a/src/_includes/modules/site-header-sample-site.njk
+++ b/src/_includes/modules/site-header-sample-site.njk
@@ -2,7 +2,7 @@
 <div class="section-default">
   <div class="branding">
     <div class="header-organization-banner">
-      <a href="/components/side-navigation-sample.html">
+      <a href="/components/side-navigation-sample.html" rel="noindex">
         <div class="logo-assets">
           <img
             src="/images/icons/balloons.svg"
