updated navigation smaples #1481 and fixed logo in the news sampes #1563

--- a/src/_includes/modules/nav-flex.html
+++ b/src/_includes/modules/nav-flex.html
@@ -58,7 +58,7 @@
     </li>
 
     <li class="nav-item" role="presentation">
-      <a href="/visual-design.html" class="first-level-link">Visual Desing</a>
+      <a class="first-level-link">Visual Desing</a>
       <div class="sub-nav">
         <div class="second-level-nav flex">
           <a href="/visual-design/typography.html" class="second-level-link">
@@ -86,7 +86,7 @@
       </div>
     </li>
     <li class="nav-item" role="presentation">
-      <a href="/components.html" class="first-level-link">Components</a>
+      <a class="first-level-link">Components</a>
       <div class="sub-nav">
         <div class="second-level-nav flex">
           <a href="/structure/site-navigation.html" class="second-level-link">
@@ -124,7 +124,7 @@
     </li>
 
     <li class="nav-item" role="presentation">
-      <a href="/patterns.html" class="first-level-link">Patterns</a>
+      <a class="first-level-link">Patterns</a>
       <div class="sub-nav">
         <div class="second-level-nav flex">
           <a href="/" class="second-level-link">
@@ -150,7 +150,7 @@
     </li>
 
     <li class="nav-item" role="presentation">
-      <a href="/about.html" class="first-level-link">About</a>
+      <a class="first-level-link">About</a>
       <div class="sub-nav">
         <div class="second-level-nav flex with-border">
           <a href="/about.html" class="second-level-link">
