--- a/src/_includes/modules/site-header-sample-site-news.njk
+++ b/src/_includes/modules/site-header-sample-site-news.njk
@@ -4,10 +4,24 @@
     <div class="header-organization-banner">
       <a href="/patterns/newsroom-sample.html" rel="noindex">
         <div class="logo-assets">
-          <img
-            src="/images/sample-logo.png"
-            class="logo-img"
-            alt="Sample site Logo" />
+          <svg
+            class="img-fluid"
+            alt="Sample site logo"
+            version="1.1"
+            id="Layer_1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px"
+            y="0px"
+            viewBox="0 0 50 50"
+            style="enable-background:new 0 0 50 50;"
+            xml:space="preserve">
+            <style type="text/css">
+              .st0{fill:#D4D4D7;}
+              .logo-assets svg {width:60px; height: 60px;}
+            </style>
+            <circle class="st0" cx="24.8" cy="24.7" r="24.5" />
+          </svg>
           <div class="logo-text">
             <span class="logo-state">State of California</span>
             <span class="logo-dept">Site name</span>
