--- a/src/_includes/modules/nav-dropdown.html
+++ b/src/_includes/modules/nav-dropdown.html
@@ -2,9 +2,7 @@
 <nav id="navigation" class="main-navigation dropdown">
   <ul id="nav_list" class="top-level-nav">
     <li class="nav-item" role="presentation">
-      <a href="/getting-started.html" class="first-level-link">
-        Getting Started
-      </a>
+      <a class="first-level-link"> Getting Started </a>
       <div class="sub-nav">
         <ul class="second-level-nav">
           <li class="unit1">
@@ -34,7 +32,7 @@
     </li>
 
     <li class="nav-item" role="presentation">
-      <a href="/visual-design.html" class="first-level-link">Visual Design</a>
+      <a class="first-level-link">Visual Design</a>
       <div class="sub-nav">
         <ul class="second-level-nav">
           <li class="unit1">
@@ -59,7 +57,7 @@
     </li>
 
     <li class="nav-item" role="presentation">
-      <a href="/" class="first-level-link">Components</a>
+      <a class="first-level-link">Components</a>
       <div class="sub-nav">
         <ul class="second-level-nav">
           <li class="unit1">
@@ -80,7 +78,7 @@
     </li>
 
     <li class="nav-item" role="presentation">
-      <a href="/patterns.html" class="first-level-link">Patterns</a>
+      <a class="first-level-link">Patterns</a>
       <div class="sub-nav">
         <ul class="second-level-nav">
           <li class="unit1">
@@ -102,7 +100,7 @@
     </li>
 
     <li class="nav-item" role="presentation">
-      <a href="/about.html" class="first-level-link">About</a>
+      <a class="first-level-link">About</a>
       <div class="sub-nav">
         <ul class="second-level-nav">
           <li class="unit1">
