using seperate colortheme files

--- a/src/_includes/head-js-css.njk
+++ b/src/_includes/head-js-css.njk
@@ -1,7 +1,10 @@
-<link rel="stylesheet" href="/css/cagov.core.colortheme-oceanside.min.css" />
+<link rel="stylesheet" href="/state-template/css/cagov.core.min.css" />
+<link
+  rel="stylesheet"
+  href="/state-template/css/colortheme-oceanside.min.css" />
 {%- if customcss -%}
 <link rel="stylesheet" href="{{ customcss }}" />
-{% endif -%}
+{%- endif -%}
 <script
   type="text/javascript"
   src="/state-template/js/cagov.core.min.js"></script>
