added UI kit page #1571

--- a/src/_includes/modules/social-media-icons.html
+++ b/src/_includes/modules/social-media-icons.html
@@ -1,6 +1,6 @@
 <div class="socialsharer-container">
   <a
-    class="ca-gov-icon-share-facebook"
+    class="ca-gov-icon-facebook"
     title="Facebook Link"
     href="https://www.facebook.com/"></a>
   <a
@@ -20,7 +20,7 @@
     title="Linkedin Link"
     href="https://www.linkedin.com/"></a>
   <a
-    class="ca-gov-icon-share-instagram"
+    class="ca-gov-icon-instagram"
     title="Instagram Link"
     href="https://www.instagram.com/"></a>
   <a
@@ -28,3 +28,4 @@
     title="Email Link"
     href="mailto:your_email@ca.gov"></a>
 </div>
+
