--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -45,6 +45,11 @@
               Typography
             </a>
           </li>
+          <li class="unit1">
+            <a href="/visual-design/ui-kit.html" class="second-level-link">
+              UI kit
+            </a>
+          </li>
         </ul>
       </div>
     </li>
