added some padding bottom to the side nav column

--- a/src/_includes/layouts/components.njk
+++ b/src/_includes/layouts/components.njk
@@ -8,7 +8,7 @@
       {%- include "../breadcrumbs.njk" -%}
       <div class="row">
         <div
-          class="col-lg-3">
+          class="col-lg-3 pb-lg-5">
           {# SIde navigation (rendering data from /src/_data/components.json and /src/_data/helpers.js #}
           <nav
             aria-labelledby="components-list" class="side-navigation sticky-6">
