Added legacy components page #1554

--- a/src/_includes/layouts/components.njk
+++ b/src/_includes/layouts/components.njk
@@ -45,6 +45,13 @@
                   </li>
                 {%- endif -%}
               {%- endfor -%}
+
+
+               <li class="bold">
+                    <a href="/components/legacy-components.html">
+                      Legacy components
+                    </a>
+              </li>
             </ul>
           </nav>
         </div>
