legacy components table

--- a/pages/sample/legacy-compoents.njk
+++ b/pages/sample/legacy-compoents.njk
@@ -1,5 +1,5 @@
 ﻿---
-title: Deprecated components
+title: Legacy components
 landing: Components
 layout: page.njk
 permalink: "components/legacy-components.html"
