enclosed css classes string into code tag

--- a/pages/sample/legacy-compoents.njk
+++ b/pages/sample/legacy-compoents.njk
@@ -50,7 +50,7 @@ permalink: "components/legacy-components.html"
 
       {%- if item.Special_CSS_classes_used !== "" %}
       <dt>Deprecated CSS classes</dt>
-      <dd>{{ item.Special_CSS_classes_used }}</dd>
+      <dd><code>{{ item.Deprecated_CSS_classes }}</code></dd>
       {%- endif -%}
 
 
