--- a/pages/sample/legacy-compoents.njk
+++ b/pages/sample/legacy-compoents.njk
@@ -48,7 +48,7 @@ permalink: "components/legacy-components.html"
       <dt>Notes</dt>
       <dd>{{ item.Notes }}</dd>
 
-      {%- if item.Special_CSS_classes_used !== "" %}
+      {%- if item.Deprecated_CSS_classes !== "" %}
       <dt>Deprecated CSS classes</dt>
       <dd><code>{{ item.Deprecated_CSS_classes }}</code></dd>
       {%- endif -%}
