removed fixed hight from the table

--- a/pages/sample/legacy-compoents-table.njk
+++ b/pages/sample/legacy-compoents-table.njk
@@ -61,6 +61,6 @@ customcss: "https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css
 <script>
     const dataTable = new simpleDatatables.DataTable("#table", {
         searchable: true,
-        fixedHeight: true,
+       // fixedHeight: true,
     });
 </script>
