updated homepage and about pages

--- a/src/_includes/modules/timeline-angled.html
+++ b/src/_includes/modules/timeline-angled.html
@@ -56,7 +56,7 @@
         <div class="dot-text">
           <h3 class="h5 mb-0" style="font-size:23px;color:#035376;">2023</h3>
           <p class="mb-4">
-            Release the first production version of the Design System
+            Release the first production version of the State Web Template V6
           </p>
         </div>
         <!-- End Static Process -->
